--- a/ZeroGravity/Info.plist
+++ b/ZeroGravity/Info.plist
@@ -24,6 +24,8 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSMainStoryboardFile</key>
+	<string>LoginType</string>
 	<key>UIAppFonts</key>
 	<array>
 		<string>Ubuntu-B.ttf</string>
@@ -34,7 +36,7 @@
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
-	<string>Main</string>
+	<string>LoginType</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
